--- a/src/index.css
+++ b/src/index.css
@@ -806,8 +806,24 @@ video {
   margin-left: auto;
 }
 
+.-mr-6 {
+  margin-right: -1.5rem;
+}
+
+.-mb-8 {
+  margin-bottom: -2rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .mr-4 {
@@ -818,8 +834,8 @@ video {
   margin-top: 0.25rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .mr-2 {
@@ -832,6 +848,14 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.-mb-1 {
+  margin-bottom: -0.25rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .ml-3 {
@@ -870,12 +894,12 @@ video {
   height: 1rem;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
 .h-2 {
   height: 0.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .min-h-screen {
@@ -906,16 +930,16 @@ video {
   width: 1rem;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
 
 .w-56 {
   width: 14rem;
-}
-
-.w-2 {
-  width: 0.5rem;
 }
 
 .w-screen {
@@ -928,6 +952,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .flex-shrink-0 {
@@ -945,12 +973,20 @@ video {
           user-select: none;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
 
 .items-baseline {
   align-items: baseline;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -999,6 +1035,10 @@ video {
   border-bottom-right-radius: 0.25rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1035,9 +1075,24 @@ video {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(248, 250, 252, var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(34, 197, 94, var(--tw-bg-opacity));
+}
+
 .bg-indigo-900 {
   --tw-bg-opacity: 1;
   background-color: rgba(25, 30, 56, var(--tw-bg-opacity));
+}
+
+.bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(253, 224, 71, var(--tw-bg-opacity));
 }
 
 .fill-white {
@@ -1048,6 +1103,14 @@ video {
   fill: #94a3b8;
 }
 
+.fill-green-800 {
+  fill: #166534;
+}
+
+.fill-red-800 {
+  fill: #991b1b;
+}
+
 .fill-indigo-400 {
   fill: #7886d7;
 }
@@ -1056,8 +1119,20 @@ video {
   fill: #334155;
 }
 
+.fill-yellow-800 {
+  fill: #854d0e;
+}
+
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-4 {
@@ -1083,6 +1158,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1098,11 +1178,6 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1116,6 +1191,14 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pt-6 {
@@ -1148,8 +1231,17 @@ video {
   line-height: 1.25rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .leading-none {
@@ -1158,6 +1250,10 @@ video {
 
 .leading-normal {
   line-height: 1.5;
+}
+
+.leading-4 {
+  line-height: 1rem;
 }
 
 .text-gray-700 {
@@ -1170,6 +1266,16 @@ video {
   color: rgba(101, 116, 205, var(--tw-text-opacity));
 }
 
+.text-indigo-400 {
+  --tw-text-opacity: 1;
+  color: rgba(120, 134, 215, var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgba(220, 38, 38, var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
@@ -1180,9 +1286,19 @@ video {
   color: rgba(178, 183, 255, var(--tw-text-opacity));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgba(148, 163, 184, var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgba(100, 116, 139, var(--tw-text-opacity));
+}
+
+.text-yellow-800 {
+  --tw-text-opacity: 1;
+  color: rgba(133, 77, 14, var(--tw-text-opacity));
 }
 
 .underline {
@@ -1236,9 +1352,19 @@ input:focus, input:active, select:focus, select:active, textarea:focus, textarea
   background-color: rgba(101, 116, 205, var(--tw-bg-opacity));
 }
 
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
 .hover\:text-orange-600:hover {
   --tw-text-opacity: 1;
   color: rgba(234, 88, 12, var(--tw-text-opacity));
+}
+
+.hover\:text-indigo-600:hover {
+  --tw-text-opacity: 1;
+  color: rgba(86, 97, 179, var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1251,8 +1377,17 @@ input:focus, input:active, select:focus, select:active, textarea:focus, textarea
   color: rgba(51, 65, 85, var(--tw-text-opacity));
 }
 
+.hover\:underline:hover {
+  text-decoration: underline;
+}
+
 .focus\:z-10:focus {
   z-index: 10;
+}
+
+.focus\:border-indigo-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgba(101, 116, 205, var(--tw-border-opacity));
 }
 
 .focus\:border-white:focus {
@@ -1282,6 +1417,10 @@ input:focus, input:active, select:focus, select:active, textarea:focus, textarea
 
 .group:hover .group-hover\:fill-white {
   fill: #fff;
+}
+
+.group:hover .group-hover\:fill-black {
+  fill: #000;
 }
 
 .group:hover .group-hover\:fill-indigo-600 {
@@ -1372,5 +1511,11 @@ input:focus, input:active, select:focus, select:active, textarea:focus, textarea
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 }
